[gd_scene load_steps=16 format=3 uid="uid://tdutty58bn5g"]

[ext_resource type="Texture2D" uid="uid://12tcnoh4t2rt" path="res://art/main_menu.jpg" id="1_8u8lk"]
[ext_resource type="Script" path="res://nodes/ui/menu_system.gd" id="1_bpgo5"]
[ext_resource type="Texture2D" uid="uid://c1th7bkbekqgr" path="res://art/main-menu/main_menu_base.png" id="2_k1mfh"]
[ext_resource type="Texture2D" uid="uid://wxorn3874kvk" path="res://art/main-menu/buttons.png" id="3_b5mhr"]
[ext_resource type="Texture2D" uid="uid://dejaafy4w1ffj" path="res://art/main-menu/font.png" id="4_upawf"]
[ext_resource type="Texture2D" uid="uid://dpgtmjj15ln7j" path="res://art/main-menu/buttons-drop-shadow.png" id="5_epw5x"]
[ext_resource type="Texture2D" uid="uid://r7ttvokevu6a" path="res://art/title.png" id="6_5sjof"]
[ext_resource type="Texture2D" uid="uid://cm85sh6xrelrn" path="res://art/level-select/select.png" id="7_ef5qe"]
[ext_resource type="PackedScene" uid="uid://c0woxlj72u5mk" path="res://nodes/ui/settings.tscn" id="8_b7u2p"]
[ext_resource type="PackedScene" uid="uid://g5yjh1m3n5vd" path="res://nodes/ui/LevelSelect.tscn" id="10_2wsmu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cg7qw"]
size = Vector2(367, 139)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5ofg"]
size = Vector2(462, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klxc2"]
size = Vector2(503, 113)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tsdj"]
size = Vector2(258, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfw7v"]
size = Vector2(399.221, 131.065)

[node name="MenuSystem" type="Node2D"]
texture_filter = 1
script = ExtResource("1_bpgo5")

[node name="MainMenuFrame" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_k1mfh")

[node name="MainMenuBG" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="MainMenuBG"]
position = Vector2(309.735, 110.5)
scale = Vector2(0.958015, 0.958015)
texture = ExtResource("6_5sjof")
region_enabled = true
region_rect = Rect2(0, 0, 559.913, 262.681)

[node name="Sprite2D" type="Sprite2D" parent="MainMenuBG/Sprite2D"]
position = Vector2(648, 17)
texture = ExtResource("6_5sjof")
region_enabled = true
region_rect = Rect2(571.619, 34.603, 707.384, 221.647)

[node name="StartButton" type="Sprite2D" parent="MainMenuBG"]
z_index = 1
texture_filter = 1
position = Vector2(645, 314)
texture = ExtResource("3_b5mhr")
region_enabled = true
region_rect = Rect2(444, 256, 378, 161)

[node name="Text" type="Sprite2D" parent="MainMenuBG/StartButton"]
position = Vector2(-4.97437, 7.25)
scale = Vector2(0.910256, 0.910256)
texture = ExtResource("4_upawf")
region_enabled = true
region_rect = Rect2(456.679, 287.122, 356.123, 117.205)

[node name="DropShadow" type="Sprite2D" parent="MainMenuBG/StartButton"]
z_index = -1
position = Vector2(15, 19)
texture = ExtResource("5_epw5x")
region_enabled = true
region_rect = Rect2(450.669, 275.852, 382.419, 152.517)

[node name="StartArea" type="Area2D" parent="MainMenuBG/StartButton"]
position = Vector2(-173, -78)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuBG/StartButton/StartArea"]
position = Vector2(175, 81)
shape = SubResource("RectangleShape2D_cg7qw")

[node name="CreditsButton" type="Sprite2D" parent="MainMenuBG"]
z_index = 1
position = Vector2(918, 473)
texture = ExtResource("3_b5mhr")
region_enabled = true
region_rect = Rect2(671.172, 416.332, 473.49, 131.624)

[node name="Text" type="Sprite2D" parent="MainMenuBG/CreditsButton"]
position = Vector2(-5.95708, 2.25)
scale = Vector2(0.914141, 0.914141)
texture = ExtResource("4_upawf")
region_enabled = true
region_rect = Rect2(705.885, 430.277, 395.307, 99.5588)

[node name="DropShadow" type="Sprite2D" parent="MainMenuBG/CreditsButton"]
z_index = -1
position = Vector2(16, 13)
texture = ExtResource("5_epw5x")
region_enabled = true
region_rect = Rect2(678.067, 428.813, 479.472, 135.51)

[node name="Area2D" type="Area2D" parent="MainMenuBG/CreditsButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuBG/CreditsButton/Area2D"]
position = Vector2(2, 5.5)
shape = SubResource("RectangleShape2D_c5ofg")

[node name="SettingsButton" type="Sprite2D" parent="MainMenuBG"]
position = Vector2(365.096, 474.5)
scale = Vector2(0.921429, 0.921429)
texture = ExtResource("3_b5mhr")
region_enabled = true
region_rect = Rect2(131.13, 415.85, 537.24, 140.36)

[node name="Text" type="Sprite2D" parent="MainMenuBG/SettingsButton"]
position = Vector2(-24.6023, 6)
scale = Vector2(0.931818, 0.931818)
texture = ExtResource("4_upawf")
region_enabled = true
region_rect = Rect2(141.48, 444.7, 487.63, 88.33)

[node name="Area2D" type="Area2D" parent="MainMenuBG/SettingsButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuBG/SettingsButton/Area2D"]
position = Vector2(-2, 2)
shape = SubResource("RectangleShape2D_klxc2")

[node name="QuitButton" type="Sprite2D" parent="MainMenuBG"]
z_index = 1
z_as_relative = false
position = Vector2(922, 605)
texture = ExtResource("3_b5mhr")
region_enabled = true
region_rect = Rect2(493.316, 552.316, 274.23, 89.4064)

[node name="Text" type="Sprite2D" parent="MainMenuBG/QuitButton"]
position = Vector2(4, 5)
scale = Vector2(0.852941, 0.852941)
texture = ExtResource("4_upawf")
region_enabled = true
region_rect = Rect2(510.235, 559.443, 249.79, 85.0349)

[node name="DropShadow" type="Sprite2D" parent="MainMenuBG/QuitButton"]
z_index = -1
position = Vector2(16.5, 14.5)
scale = Vector2(0.989051, 0.96875)
texture = ExtResource("5_epw5x")
region_enabled = true
region_rect = Rect2(502.797, 561.651, 274.334, 96.525)

[node name="QuitArea" type="Area2D" parent="MainMenuBG/QuitButton"]
position = Vector2(-130, -37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuBG/QuitButton/QuitArea"]
position = Vector2(129, 39.5)
shape = SubResource("RectangleShape2D_5tsdj")

[node name="LevelSelect" type="Sprite2D" parent="MainMenuBG"]
position = Vector2(368, 606)
texture = ExtResource("3_b5mhr")
region_enabled = true
region_rect = Rect2(494.769, 552.049, 276.033, 98.3471)

[node name="Text" type="Sprite2D" parent="MainMenuBG/LevelSelect"]
position = Vector2(-2, 2)
scale = Vector2(0.663793, 0.663793)
texture = ExtResource("7_ef5qe")

[node name="Area2D" type="Area2D" parent="MainMenuBG/LevelSelect/Text"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainMenuBG/LevelSelect/Text/Area2D"]
position = Vector2(-2.25973, -5.27272)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_vfw7v")

[node name="MainMenu" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
scale = Vector2(4, 4)
texture = ExtResource("1_8u8lk")

[node name="SettingsMenu" parent="." instance=ExtResource("8_b7u2p")]
position = Vector2(-1280, 0)

[node name="LevelSelect" parent="." instance=ExtResource("10_2wsmu")]
position = Vector2(0, 720)

[connection signal="input_event" from="MainMenuBG/StartButton/StartArea" to="." method="_start_input"]
[connection signal="mouse_entered" from="MainMenuBG/StartButton/StartArea" to="." method="_start_over"]
[connection signal="mouse_exited" from="MainMenuBG/StartButton/StartArea" to="." method="_start_exit"]
[connection signal="input_event" from="MainMenuBG/CreditsButton/Area2D" to="." method="_action_credits"]
[connection signal="mouse_entered" from="MainMenuBG/CreditsButton/Area2D" to="." method="_over_credits"]
[connection signal="mouse_exited" from="MainMenuBG/CreditsButton/Area2D" to="." method="_exit_credits"]
[connection signal="input_event" from="MainMenuBG/SettingsButton/Area2D" to="." method="_settings_event"]
[connection signal="mouse_entered" from="MainMenuBG/SettingsButton/Area2D" to="." method="_settings_enter"]
[connection signal="mouse_exited" from="MainMenuBG/SettingsButton/Area2D" to="." method="_settings_exit"]
[connection signal="input_event" from="MainMenuBG/QuitButton/QuitArea" to="." method="_quit_event"]
[connection signal="mouse_entered" from="MainMenuBG/QuitButton/QuitArea" to="." method="_quit_over"]
[connection signal="mouse_exited" from="MainMenuBG/QuitButton/QuitArea" to="." method="_quit_exit"]
[connection signal="input_event" from="MainMenuBG/LevelSelect/Text/Area2D" to="." method="_select_event"]
[connection signal="mouse_entered" from="MainMenuBG/LevelSelect/Text/Area2D" to="." method="_select_enter"]
[connection signal="mouse_exited" from="MainMenuBG/LevelSelect/Text/Area2D" to="." method="_select_exit"]
[connection signal="back" from="SettingsMenu" to="." method="_unload_settings"]
[connection signal="play_level" from="LevelSelect" to="." method="_level_selected"]
[connection signal="unload" from="LevelSelect" to="." method="_unload_levelselect"]
